# ti-phase-light-modulator

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-workflow.yml
examples/: custom_plm.py  display.py  p67.py
src/ti_phase_light_modulator/: __init__.py  display.py  util.py
src/ti_phase_light_modulator/db/: p47.json  p67.json
src/ti_plm/: __init__.py  display.py
src/ti_plm/db/: __init__.py
tests/: test_bitpack.py  test_bitstack.py  test_display.py  test_plm_devices.py
